# django-async-email

./: .travis.yml  CHANGELOG.md  README.md  index.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: flake8.yml  publish_package.yml  python.yml  superlinter.yml  tox.yml
async_email/: conf.py
async_email/email/: __init__.py  tasks.py  template.py  utils.py
async_email/tests/: conftest.py  test_cmp_task.py  test_send_email.py  test_settings.py
async_email/tests/template/: test_email_factory.py  test_template_base_email.py
async_email/tests/utils/: test_validate_email_address.py
demo_project/: docker-compose.yml  pyproject.toml
demo_project/core/: models.py
demo_project/core/management/commands/: send_email.py
demo_project/core/templates/welcome/: body.html  body.txt  subject.txt
demo_project/demo_project/: celery.py  settings.py  urls.py
demo_project/docker/: Dockerfile
src/async_email/: __init__.py  apps.py  conf.py  exceptions.py  models.py  task.py  tasks.py
src/async_email/email/: __init__.py  exceptions.py  tasks.py  template.py  utils.py
tests/: conftest.py  test_async_email_initialization.py  test_celery_settings.py  test_cmp_task.py  test_send_email.py  test_send_email_template.py  test_settings.py  test_task.py
tests/tasks/: test_create_tasks.py  test_create_tasks_for_email_categories.py
tests/tasks/send_email_task/: test_task.py
tests/template/: test_email.py  test_email_factory.py  test_template_base_email.py  test_template_based_email.py
tests/utils/: test_resolve_dns_mx_record.py
