[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.black]
multi_line_output = 3
force_grid_wrap = 0
line_length = 88
target-version = ['py37', 'py38']

[tool.pytest.ini_options]
minversion = "6.0"
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = [
    "test_*.py",
    "*_test.py",
    "tests.py",
]
addopts = "-ra --strict --doctest-modules --doctest-glob=*.rst --tb=short --reuse-db -p no:warnings -s -vvv"
testpaths = "tests"
