[tool.poetry]
name = "demo_project"
version = "0.1.0"
description = ""
authors = ["eltonplima <me@eltonplima.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"
celery = "~4.4.7"
django-extensions = "^3.0.9"
environs = "^8.0.0"
django-async-email = "^0.1.1"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
